# opengl

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glexample.sln  glexample.vcxproj  glexample.vcxproj.filters  gradiant_triangle.vcxproj  gradiant_triangle.vcxproj.filters  simple_triangle.vcxproj  simple_triangle.vcxproj.filters
shaders/: camera_control_v.glsl  coord_transform_f.glsl  coord_transform_v.glsl  cube_f.glsl  gradiant_triangle_f.glsl  gradiant_triangle_v.glsl  texture_triangle_f.glsl  texture_triangle_v.glsl  transform_v.glsl
src/: camera_control.cc  coord_transform.cc  cube.cc  gradiant_triangle.cc  shader.hpp  simple_triangle.cc  texture_triangle.cc  transform.cc  triangle.cc  ver.c
src/common/: utils.hpp
src/integration/: reuse_window.cc
